@@ -162,6 +162,7 @@ library:
 @item NUT                       @tab X @tab X
     @tab NUT Open Container Format
 @item Ogg                       @tab X @tab X
+@item Playstation Portable PMP  @tab   @tab X
 @item TechnoTrend PVA           @tab   @tab X
     @tab Used by TechnoTrend DVB PCI boards.
 @item QCP                       @tab   @tab X
