@@ -89,6 +89,7 @@ version <next>:
 - Chronomaster DFA decoder
 - DPX image encoder
 - MicroDVD subtitle file muxer and demuxer
+- Playstation Portable PMP format demuxer
 
 
 version 0.6:
